# stepfunction-labs

./: .env.test  .gitignore  build.sh  readme.md
projects/simple-python-worker/: .env.test  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
projects/simple-python-worker/local/: docker-compose.yaml  input.json  localstack_init_script.sh  send_sns_message.sh  send_sqs_message.sh
projects/simple-python-worker/simple_python_worker/: main.py  signal_handler.py  sqs_message.py
terraform/: ecr.tf  ecs.tf  iam_roles.tf  main.tf  output.tf  sns.tf  sqs.tf  variables.tf
terraform/policy_templates/: trust-policy-ecs-task.tpl
